--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,5 +1,8 @@
-- name: application installs
-  include: apps.yml
+- name: homebrew
+  include: homebrew.yml
 
 - name: dotfiles
   include: dotfiles.yml
+
+- name: application installs
+  include: apps.yml
