Fixing up ansible

--- a/roles/base/tasks/dotfiles.yml
+++ b/roles/base/tasks/dotfiles.yml
@@ -8,7 +8,7 @@
   lineinfile: dest={{home_directory}}/.bash_profile regexp="\. \$HOME\/\.bashrc" line="[[ -r $HOME/.bashrc ]] && . $HOME/.bashrc"
 
 - name: Copy in bashrc
-  template: src=/roles/base/templates/bashrc dest={{home_directory}}/.bashrc
+  template: src=templates/bashrc dest={{home_directory}}/.bashrc
 
 - name: Ensure presence of local bin
   file: state=directory recurse=yes path={{home_directory}}/local/bin
@@ -17,21 +17,21 @@
   lineinfile: dest={{home_directory}}/.bashrc regexp="^export PATH\=\$HOME\/local\/bin" line="export PATH=$HOME/local/bin:$PATH"
 
 - name: Copy in git config
-  template: src=/roles/base/templates/git-config dest={{home_directory}}/.gitconfig
+  template: src=templates/git-config dest={{home_directory}}/.gitconfig
 
 - name: Copy in global git ignore
-  file: src=/roles/base/dotfiles/gitignore_global dest={{home_directory}}/.gitignore_global
+  file: src=dotfiles/gitignore_global dest={{home_directory}}/.gitignore_global
 
 - name: Copy in .inputrc
-  file: src=/roles/base/dotfiles/inputrc dest={{home_directory}}/.inputrc
+  file: src=dotfiles/inputrc dest={{home_directory}}/.inputrc
 
 - name: Copy in .vimrc
-  file: src=/roles/base/dotfiles/vimrc dest={{home_directory}}/.vimrc
+  file: src=dotfiles/vimrc dest={{home_directory}}/.vimrc
 
 - name: Copy in scripts
   copy:
-    src: /roles/base/scripts
-    dest: {{home_directory}}/local/bin
-    owner: {{user}}
-    group: {{user}}
+    src: scripts/
+    dest: "{{home_directory}}/local/bin"
+    owner: "{{user}}"
+    group: "{{user}}"
     mode: '0755'
