--- a/roles/expedia/tasks/main.yml
+++ b/roles/expedia/tasks/main.yml
@@ -5,7 +5,7 @@
 
 - name: Setup git clone env
   copy:
-    dest: {{home_directory}}/.gitcloneenv
+    dest: "{{home_directory}}/.gitcloneenv"
     content: |
       GIT_CLONE_DEFAULT_HOST={{github_host}}
       GIT_CLONE_DEFAULT_PROJECT={{github_project}}
