--- a/roles/expedia/tasks/maven.yml
+++ b/roles/expedia/tasks/maven.yml
@@ -2,9 +2,9 @@
 - name: Setup git clone env
   copy:
     src: roles/expedia/templates/settings.xml
-    dest: {{home_directory}}/.m2/settings.xml
+    dest: "{{home_directory}}/.m2/settings.xml"
 
 - name: Add script to setup maven authorization
   copy:
     src: roles/expedia/scripts/m2-apitoken-gen.sh
-    dest: {{home_directory}}/local/bin
+    dest: "{{home_directory}}/local/bin"
