--- a/roles/base/tasks/apps.yml
+++ b/roles/base/tasks/apps.yml
@@ -12,6 +12,5 @@
 
 - name: start installing homebrew applications
   homebrew:
-    name: "{{item}}"
+    name: "{{applications}}"
     state: latest
-  with_items: "{{applications}}"
