--- a/roles/base/handlers/main.yml
+++ b/roles/base/handlers/main.yml
@@ -1,3 +1,6 @@
 - name: Change login shell
   become_user: "{{user}}}}"
   command: chsh -s /usr/local/bin/bash
+
+- name: Setup ssh-agent
+  shell: eval "$(ssh-agent -s)" && ssh-add -K ~/.ssh/id_rsa
