Install aws_keygen for expedia

--- a/roles/expedia/tasks/main.yml
+++ b/roles/expedia/tasks/main.yml
@@ -16,9 +16,10 @@
 
 - name: tap homebrew AdoptOpenJDK/openjdk
   homebrew_tap:
-    tap: "Brand-Expedia/homebrew-tools git@github.expedia.biz:Brand-Expedia/homebrew-tools.git"
+    tap: Brand-Expedia/homebrew-tools
+    url: git@github.expedia.biz:Brand-Expedia/homebrew-tools.git
 
 - name: aws_keygen
   homebrew:
-    name: "aws_key_gen"
+    name: aws_key_gen
     state: latest
