Try and fix installing aws_key_gen

--- a/roles/expedia/tasks/main.yml
+++ b/roles/expedia/tasks/main.yml
@@ -21,7 +21,7 @@
 
 - name: aws_keygen
   environment:
-    HOMEBREW_ARTIFACTORY_API_TOKEN: "{{ lookup('pipe','curl -u $username --silent --show-error --fail \'https://artylab.expedia.biz/api/security/encryptedPassword\'' }}"
+    HOMEBREW_ARTIFACTORY_API_TOKEN: "{{ lookup('pipe','curl -u $username --silent --show-error --fail https://artylab.expedia.biz/api/security/encryptedPassword' }}"
   homebrew:
     name: aws_key_gen
     state: latest
